--- a/www/style.css
+++ b/www/style.css
@@ -21,7 +21,8 @@ h1 {
 
 h2 {
   font-size: 1.125em;
-  margin: 10px 0px 0px 0px;  /* Top  Right  Bottom  Left */
+  margin: 5px 0px 10px 0px;  /* Top  Right  Bottom  Left */
+  font-weight: 700;
 }
 
 p {
@@ -41,12 +42,6 @@ a:hover {
   color: #5c5c5c; /* dark grey */
 }
 
-.ban {
-  text-align: center;
-  font-size: 200px;
-  font-weight: 700;
-}
-
 .container-fluid {
   border: 1px solid red;
 }
@@ -59,6 +54,10 @@ a:hover {
   border: 1px solid red;
 }
 
+.select-municipality {
+  width: 33%
+}
+
 .output-container {
   width: 100%;
   display: flex;
@@ -68,7 +67,7 @@ a:hover {
 }
 
 .narrow-output {
-  width: 30%;
+  width: 33%;
   padding: 10px 0px 20px 0px; /* Top  Right  Bottom  Left */
   border-bottom: 1px solid #e9e9e9;
   margin-bottom: 30px;
@@ -76,17 +75,23 @@ a:hover {
 }
 
 .wide-output {
-  width: 60%;
+  width: 62%;
   padding: 10px 0px 20px 0px; /* Top  Right  Bottom  Left */
   border-bottom: 1px solid #e9e9e9;
   margin-bottom: 30px;
   border: 1px solid red;
 }
 
-.output {
-  width: 45%;
-  padding: 10px 0px 20px 0px; /* Top  Right  Bottom  Left */
-  border-bottom: 1px solid #e9e9e9;
-  margin-bottom: 30px;
+/* center middle child: https://www.freecodecamp.org/news/how-to-center-anything-with-css-align-a-div-text-and-more/ */
+.center {
+  position: relative;
+}
+
+#percent_membership {
+  font-size: 4em;
   border: 1px solid red;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
