--- a/www/style.css
+++ b/www/style.css
@@ -9,7 +9,7 @@
 
 body {
   background-color: #fbfbfb; /* almost white */
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', cursive;
   font-size: 18px;
   color: #2d2d2d; /* almost black */
 }
